--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_episode2">Episode2</string>
     <string name="title_activity_episode3">Episode3</string>
     <string name="title_activity_episode4">Episode4</string>
+    <string name="title_activity_episode5">Episode5</string>
 </resources>
