--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_activity_episode3">Episode3</string>
     <string name="title_activity_episode4">Episode4</string>
     <string name="title_activity_episode5">Episode5</string>
+    <string name="title_activity_episode7">Episode7</string>
+    <string name="title_activity_episode8">Episode8</string>
 </resources>
