--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_activity_episode5">Episode5</string>
     <string name="title_activity_episode7">Episode7</string>
     <string name="title_activity_episode8">Episode8</string>
+    <string name="title_activity_episode9">Episode9</string>
+    <string name="title_activity_episode10">Episode10</string>
 </resources>
